# Davidious-AI-Code-Lab-Trainer

./: README.md
backend/: README.md  conftest.py  database.py  main.py  pyproject.toml
backend/api/: auth.py  document.py  learning_path.py  youtube.py
backend/core/: config.py  security.py
backend/models/: __init__.py  daily_study_plan.py  document.py  learning_path.py  user.py
backend/schemas/: auth.py  chunk.py  document.py  youtube.py
backend/services/: chunking.py  document_processing.py  learning_path.py  text_extraction.py  upload_file.py  upload_youtube.py  youtube.py
backend/tests/: test_basic.py
frontend/: README.md  index.html  package.json  tailwind.config.js
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/api/: api.ts  client.ts
frontend/src/components/: AuthLayout.tsx  Footer.tsx  Layout.tsx  ProtectedRoute.tsx
frontend/src/components/AuthLayout/: AuthLayout.module.css  AuthLayout.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: About.tsx  Careers.tsx  CodeLab.tsx  Contact.tsx  CreatePath.tsx  Dashboard.tsx  DocumentList.tsx  Home.tsx  Introduction.tsx  Login.tsx  PathDetail.tsx  PathList.tsx  PrivacyPolicy.tsx  Register.tsx  Support.tsx  TermsOfService.tsx  Upload.tsx  pages.css
frontend/src/pages/Home/: Home.module.css  Home.tsx
frontend/src/pages/Login/: Login.module.css  Login.tsx
frontend/src/pages/Register/: Register.tsx
frontend/src/services/: auth.service.ts
frontend/src/styles/: shared.ts
frontend/src/types/: auth.ts  types.ts
