[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.135.2",
    "python-jose[cryptography]>=3.3.0",
    "langchain>=1.2.13",
    "python-multipart>=0.0.9",
    "openai>=2.29.0",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.42.0",
    "tiktoken>=0.12.0",
    "docx>=0.2.4",
    "pypdf>=6.10.2",
    "youtube-transcript-api>=1.2.4",
]
